--- a/config_sample.env
+++ b/config_sample.env
@@ -13,7 +13,7 @@ TELEGRAM_API =
 TELEGRAM_HASH = ""
 DATABASE_URL = ""
 UPSTREAM_REPO = "https://github.com/breakdowns/slam-mirrorbot"
-UPSTREAM_BRANCH = "master"
+UPSTREAM_BRANCH = "main"
 # OPTIONAL CONFIG
 AUTHORIZED_CHATS = ""
 IGNORE_PENDING_REQUESTS = ""
